@@ -26,6 +26,7 @@ $Id$
 	  file
 	Added a 'loadsubs' command to eventually phase out the 'load-subs'
 	  command
+	Made M-n work on classes and instances with spaces in them
 
 1.2.8
 	Class pings are displayed differently now
